Assignment 3/a3.output
   0  $accept : %entry% $end

   1  main : or_expression EOF

   2  or_expression : and_expression
   3                | or_expression DISJ and_expression

   4  and_expression : not_expression
   5                 | and_expression CONJ not_expression

   6  not_expression : comparison
   7                 | NOT not_expression

   8  comparison : sub_expression
   9             | comparison EQ sub_expression
  10             | comparison GT sub_expression
  11             | comparison LT sub_expression
  12             | comparison GT EQ sub_expression
  13             | comparison LT EQ sub_expression

  14  sub_expression : mult_expression
  15                 | sub_expression MINUS mult_expression
  16                 | sub_expression PLUS mult_expression

  17  mult_expression : abs_expression
  18                  | mult_expression TIMES abs_expression
  19                  | mult_expression DIV abs_expression
  20                  | mult_expression REM abs_expression

  21  abs_expression : neg_expression
  22                 | ABS abs_expression

  23  neg_expression : if_then_else
  24                 | TILDA neg_expression

  25  if_then_else : project_expression
  26               | IF or_expression THEN or_expression ELSE or_expression FI

  27  project_expression : tuple_expression
  28                     | PROJ LP INT COMMA INT RP main

  29  tuple_expression : parenthesis
  30                   | LP RP
  31                   | LP tuple RP

  32  tuple : or_expression COMMA tuple
  33        | or_expression

  34  parenthesis : constant
  35              | LP or_expression RP

  36  constant : INT
  37           | ID
  38           | BOOL

  39  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (39)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	main  goto 12
	or_expression  goto 13
	and_expression  goto 14
	not_expression  goto 15
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	constant : INT .  (36)

	.  reduce 36


state 4
	constant : BOOL .  (38)

	.  reduce 38


state 5
	constant : ID .  (37)

	.  reduce 37


state 6
	abs_expression : ABS . abs_expression  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	abs_expression  goto 26
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 7
	neg_expression : TILDA . neg_expression  (24)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	neg_expression  goto 27
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 8
	not_expression : NOT . not_expression  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	not_expression  goto 28
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 9
	tuple_expression : LP . RP  (30)
	tuple_expression : LP . tuple RP  (31)
	parenthesis : LP . or_expression RP  (35)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	RP  shift 29
	IF  shift 10
	PROJ  shift 11
	.  error

	or_expression  goto 30
	and_expression  goto 14
	not_expression  goto 15
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	tuple  goto 31
	constant  goto 25


state 10
	if_then_else : IF . or_expression THEN or_expression ELSE or_expression FI  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	or_expression  goto 32
	and_expression  goto 14
	not_expression  goto 15
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 11
	project_expression : PROJ . LP INT COMMA INT RP main  (28)

	LP  shift 33
	.  error


state 12
	%entry% : '\001' main .  (39)

	.  reduce 39


state 13
	main : or_expression . EOF  (1)
	or_expression : or_expression . DISJ and_expression  (3)

	DISJ  shift 34
	EOF  shift 35
	.  error


state 14
	or_expression : and_expression .  (2)
	and_expression : and_expression . CONJ not_expression  (5)

	CONJ  shift 36
	DISJ  reduce 2
	RP  reduce 2
	THEN  reduce 2
	ELSE  reduce 2
	FI  reduce 2
	COMMA  reduce 2
	EOF  reduce 2


state 15
	and_expression : not_expression .  (4)

	.  reduce 4


state 16
	not_expression : comparison .  (6)
	comparison : comparison . EQ sub_expression  (9)
	comparison : comparison . GT sub_expression  (10)
	comparison : comparison . LT sub_expression  (11)
	comparison : comparison . GT EQ sub_expression  (12)
	comparison : comparison . LT EQ sub_expression  (13)

	EQ  shift 37
	GT  shift 38
	LT  shift 39
	CONJ  reduce 6
	DISJ  reduce 6
	RP  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	FI  reduce 6
	COMMA  reduce 6
	EOF  reduce 6


state 17
	comparison : sub_expression .  (8)
	sub_expression : sub_expression . MINUS mult_expression  (15)
	sub_expression : sub_expression . PLUS mult_expression  (16)

	PLUS  shift 40
	MINUS  shift 41
	CONJ  reduce 8
	DISJ  reduce 8
	EQ  reduce 8
	GT  reduce 8
	LT  reduce 8
	RP  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	FI  reduce 8
	COMMA  reduce 8
	EOF  reduce 8


state 18
	sub_expression : mult_expression .  (14)
	mult_expression : mult_expression . TIMES abs_expression  (18)
	mult_expression : mult_expression . DIV abs_expression  (19)
	mult_expression : mult_expression . REM abs_expression  (20)

	TIMES  shift 42
	DIV  shift 43
	REM  shift 44
	PLUS  reduce 14
	MINUS  reduce 14
	CONJ  reduce 14
	DISJ  reduce 14
	EQ  reduce 14
	GT  reduce 14
	LT  reduce 14
	RP  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	FI  reduce 14
	COMMA  reduce 14
	EOF  reduce 14


state 19
	mult_expression : abs_expression .  (17)

	.  reduce 17


state 20
	abs_expression : neg_expression .  (21)

	.  reduce 21


state 21
	neg_expression : if_then_else .  (23)

	.  reduce 23


state 22
	if_then_else : project_expression .  (25)

	.  reduce 25


state 23
	project_expression : tuple_expression .  (27)

	.  reduce 27


state 24
	tuple_expression : parenthesis .  (29)

	.  reduce 29


state 25
	parenthesis : constant .  (34)

	.  reduce 34


state 26
	abs_expression : ABS abs_expression .  (22)

	.  reduce 22


state 27
	neg_expression : TILDA neg_expression .  (24)

	.  reduce 24


state 28
	not_expression : NOT not_expression .  (7)

	.  reduce 7


state 29
	tuple_expression : LP RP .  (30)

	.  reduce 30


30: shift/reduce conflict (shift 45, reduce 33) on RP
state 30
	or_expression : or_expression . DISJ and_expression  (3)
	tuple : or_expression . COMMA tuple  (32)
	tuple : or_expression .  (33)
	parenthesis : LP or_expression . RP  (35)

	DISJ  shift 34
	RP  shift 45
	COMMA  shift 46


state 31
	tuple_expression : LP tuple . RP  (31)

	RP  shift 47
	.  error


state 32
	or_expression : or_expression . DISJ and_expression  (3)
	if_then_else : IF or_expression . THEN or_expression ELSE or_expression FI  (26)

	DISJ  shift 34
	THEN  shift 48
	.  error


state 33
	project_expression : PROJ LP . INT COMMA INT RP main  (28)

	INT  shift 49
	.  error


state 34
	or_expression : or_expression DISJ . and_expression  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	and_expression  goto 50
	not_expression  goto 15
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 35
	main : or_expression EOF .  (1)

	.  reduce 1


state 36
	and_expression : and_expression CONJ . not_expression  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	not_expression  goto 51
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 37
	comparison : comparison EQ . sub_expression  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	sub_expression  goto 52
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 38
	comparison : comparison GT . sub_expression  (10)
	comparison : comparison GT . EQ sub_expression  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	EQ  shift 53
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	sub_expression  goto 54
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 39
	comparison : comparison LT . sub_expression  (11)
	comparison : comparison LT . EQ sub_expression  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	EQ  shift 55
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	sub_expression  goto 56
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 40
	sub_expression : sub_expression PLUS . mult_expression  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	mult_expression  goto 57
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 41
	sub_expression : sub_expression MINUS . mult_expression  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	mult_expression  goto 58
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 42
	mult_expression : mult_expression TIMES . abs_expression  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	abs_expression  goto 59
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 43
	mult_expression : mult_expression DIV . abs_expression  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	abs_expression  goto 60
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 44
	mult_expression : mult_expression REM . abs_expression  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	abs_expression  goto 61
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 45
	parenthesis : LP or_expression RP .  (35)

	.  reduce 35


state 46
	tuple : or_expression COMMA . tuple  (32)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	or_expression  goto 62
	and_expression  goto 14
	not_expression  goto 15
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	tuple  goto 63
	constant  goto 25


state 47
	tuple_expression : LP tuple RP .  (31)

	.  reduce 31


state 48
	if_then_else : IF or_expression THEN . or_expression ELSE or_expression FI  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	or_expression  goto 64
	and_expression  goto 14
	not_expression  goto 15
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 49
	project_expression : PROJ LP INT . COMMA INT RP main  (28)

	COMMA  shift 65
	.  error


state 50
	or_expression : or_expression DISJ and_expression .  (3)
	and_expression : and_expression . CONJ not_expression  (5)

	CONJ  shift 36
	DISJ  reduce 3
	RP  reduce 3
	THEN  reduce 3
	ELSE  reduce 3
	FI  reduce 3
	COMMA  reduce 3
	EOF  reduce 3


state 51
	and_expression : and_expression CONJ not_expression .  (5)

	.  reduce 5


state 52
	comparison : comparison EQ sub_expression .  (9)
	sub_expression : sub_expression . MINUS mult_expression  (15)
	sub_expression : sub_expression . PLUS mult_expression  (16)

	PLUS  shift 40
	MINUS  shift 41
	CONJ  reduce 9
	DISJ  reduce 9
	EQ  reduce 9
	GT  reduce 9
	LT  reduce 9
	RP  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	FI  reduce 9
	COMMA  reduce 9
	EOF  reduce 9


state 53
	comparison : comparison GT EQ . sub_expression  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	sub_expression  goto 66
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 54
	comparison : comparison GT sub_expression .  (10)
	sub_expression : sub_expression . MINUS mult_expression  (15)
	sub_expression : sub_expression . PLUS mult_expression  (16)

	PLUS  shift 40
	MINUS  shift 41
	CONJ  reduce 10
	DISJ  reduce 10
	EQ  reduce 10
	GT  reduce 10
	LT  reduce 10
	RP  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	FI  reduce 10
	COMMA  reduce 10
	EOF  reduce 10


state 55
	comparison : comparison LT EQ . sub_expression  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	sub_expression  goto 67
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 56
	comparison : comparison LT sub_expression .  (11)
	sub_expression : sub_expression . MINUS mult_expression  (15)
	sub_expression : sub_expression . PLUS mult_expression  (16)

	PLUS  shift 40
	MINUS  shift 41
	CONJ  reduce 11
	DISJ  reduce 11
	EQ  reduce 11
	GT  reduce 11
	LT  reduce 11
	RP  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	FI  reduce 11
	COMMA  reduce 11
	EOF  reduce 11


state 57
	sub_expression : sub_expression PLUS mult_expression .  (16)
	mult_expression : mult_expression . TIMES abs_expression  (18)
	mult_expression : mult_expression . DIV abs_expression  (19)
	mult_expression : mult_expression . REM abs_expression  (20)

	TIMES  shift 42
	DIV  shift 43
	REM  shift 44
	PLUS  reduce 16
	MINUS  reduce 16
	CONJ  reduce 16
	DISJ  reduce 16
	EQ  reduce 16
	GT  reduce 16
	LT  reduce 16
	RP  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	FI  reduce 16
	COMMA  reduce 16
	EOF  reduce 16


state 58
	sub_expression : sub_expression MINUS mult_expression .  (15)
	mult_expression : mult_expression . TIMES abs_expression  (18)
	mult_expression : mult_expression . DIV abs_expression  (19)
	mult_expression : mult_expression . REM abs_expression  (20)

	TIMES  shift 42
	DIV  shift 43
	REM  shift 44
	PLUS  reduce 15
	MINUS  reduce 15
	CONJ  reduce 15
	DISJ  reduce 15
	EQ  reduce 15
	GT  reduce 15
	LT  reduce 15
	RP  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	FI  reduce 15
	COMMA  reduce 15
	EOF  reduce 15


state 59
	mult_expression : mult_expression TIMES abs_expression .  (18)

	.  reduce 18


state 60
	mult_expression : mult_expression DIV abs_expression .  (19)

	.  reduce 19


state 61
	mult_expression : mult_expression REM abs_expression .  (20)

	.  reduce 20


state 62
	or_expression : or_expression . DISJ and_expression  (3)
	tuple : or_expression . COMMA tuple  (32)
	tuple : or_expression .  (33)

	DISJ  shift 34
	COMMA  shift 46
	RP  reduce 33


state 63
	tuple : or_expression COMMA tuple .  (32)

	.  reduce 32


state 64
	or_expression : or_expression . DISJ and_expression  (3)
	if_then_else : IF or_expression THEN or_expression . ELSE or_expression FI  (26)

	DISJ  shift 34
	ELSE  shift 68
	.  error


state 65
	project_expression : PROJ LP INT COMMA . INT RP main  (28)

	INT  shift 69
	.  error


state 66
	comparison : comparison GT EQ sub_expression .  (12)
	sub_expression : sub_expression . MINUS mult_expression  (15)
	sub_expression : sub_expression . PLUS mult_expression  (16)

	PLUS  shift 40
	MINUS  shift 41
	CONJ  reduce 12
	DISJ  reduce 12
	EQ  reduce 12
	GT  reduce 12
	LT  reduce 12
	RP  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	FI  reduce 12
	COMMA  reduce 12
	EOF  reduce 12


state 67
	comparison : comparison LT EQ sub_expression .  (13)
	sub_expression : sub_expression . MINUS mult_expression  (15)
	sub_expression : sub_expression . PLUS mult_expression  (16)

	PLUS  shift 40
	MINUS  shift 41
	CONJ  reduce 13
	DISJ  reduce 13
	EQ  reduce 13
	GT  reduce 13
	LT  reduce 13
	RP  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	FI  reduce 13
	COMMA  reduce 13
	EOF  reduce 13


state 68
	if_then_else : IF or_expression THEN or_expression ELSE . or_expression FI  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	or_expression  goto 70
	and_expression  goto 14
	not_expression  goto 15
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 69
	project_expression : PROJ LP INT COMMA INT . RP main  (28)

	RP  shift 71
	.  error


state 70
	or_expression : or_expression . DISJ and_expression  (3)
	if_then_else : IF or_expression THEN or_expression ELSE or_expression . FI  (26)

	DISJ  shift 34
	FI  shift 72
	.  error


state 71
	project_expression : PROJ LP INT COMMA INT RP . main  (28)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	main  goto 73
	or_expression  goto 13
	and_expression  goto 14
	not_expression  goto 15
	comparison  goto 16
	sub_expression  goto 17
	mult_expression  goto 18
	abs_expression  goto 19
	neg_expression  goto 20
	if_then_else  goto 21
	project_expression  goto 22
	tuple_expression  goto 23
	parenthesis  goto 24
	constant  goto 25


state 72
	if_then_else : IF or_expression THEN or_expression ELSE or_expression FI .  (26)

	.  reduce 26


state 73
	project_expression : PROJ LP INT COMMA INT RP main .  (28)

	.  reduce 28


State 30 contains 1 shift/reduce conflict.


28 terminals, 17 nonterminals
40 grammar rules, 74 states
